"FixRankingSpacingAndDisplay"

--- a/css/main.css
+++ b/css/main.css
@@ -291,6 +291,7 @@ input[type="text"], input[type="number"], select, textarea {
 .establishment-type {
     font-size: 1.4em;
     color: #000;
+    margin-right: 5px;
 }
 
 .establishment-name {
